refactored useStates into formState, fixed URL validation

--- a/src/components/NewMovie/NewMovie.scss
+++ b/src/components/NewMovie/NewMovie.scss
@@ -1,1 +1,10 @@
-// not empty
+.errorMessage {
+  margin-top: -8px;
+  padding: 0;
+  color: rgb(209, 23, 23);
+  font-size: 12px;
+}
+
+.urlExample {
+  color: rgb(7, 119, 28);
+}
