task solution omg im tired haha

--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -1,3 +1,23 @@
-.card-image img {
-  object-fit: contain;
+.card {
+  &--light {
+    background-color: none;
+    color: #000;
+
+    .title {
+      color: #000;
+    }
+  }
+
+  &--dark {
+    background-color: #1f1f1f;
+    color: #fff;
+
+    .title {
+      color: #fff;
+    }
+  }
+
+  &-image img {
+    object-fit: contain;
+  }
 }
