--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 .header {
   grid-area: header;
   height: 100px;
-  padding: 20px 20px;
+  padding: 20px;
   display: grid;
   grid-template-columns: 20fr 2fr 1fr;
 
@@ -33,6 +33,7 @@
     font-weight: 600;
     border-radius: 15px;
     transition: 0.3s linear opacity;
+    cursor: pointer;
 
     &--light {
       background-color: #292929;
